--- a/Module2/home_work/04_hw.md
+++ b/Module2/home_work/04_hw.md
@@ -1,43 +1,9 @@
-## "Воздушные шарики"
-
-### Задание
-
-В магазине продают *только* по *три* и по *пять* воздушных шариков.
-
-Можно ли купить ровно k шариков?
-
-![balloon](img/balloon.png)
-
-### Формат входных данных
-
-Дано целое положительное число, количество шариков, которые вы планируете купить.
-
-### Формат выходных данных
-
-Вывести "Да", если данное количество шариков можно приобрести в магазине. И "Нет", если нельзя.
-
-### Решение задачи
-
-```python
-# TODO: you code here...
-```
-
----
-
-### Данные для самопроверки
-
-
-| Дано | Результат |
-| :--------: | -------------------- |
-|    4    | Нет             |
-|    5    | Да               |
-|    7    | Нет             |
-|    8    | Да               |
-|    13    | Да               |
-
-### Подсказки
-
-<details>
-<summary>Подсказка-1</summary>
-Возьмите все значения покупаемых шариков(k) от 1 до 20 и проанализируйте результат
-</details>
+quantity_air_balloons=int(input("quantity_air_balloons:"))
+if quantity_air_balloons%3==0:
+    print("Да")
+elif quantity_air_balloons%5==0:
+    print("Да")
+elif quantity_air_balloons % 8 == 0:
+    print("Да")
+else:
+    print("Нет")
